--- a/top games/index.html
+++ b/top games/index.html
@@ -180,5 +180,65 @@
         <p><b>$10.10</b></p>
         <a href="" class="button">buy</a>
     </div>
+
+    <h2 class="plans">On our website you can purchase an individual game or a monthly subscription! </h2>
+    <table>
+        <caption>OUR PLANS</caption>
+        <thead>
+            <tr>
+                <th class="basic">BASIC</th>
+                <th class="pro">PRO</th>
+                <th class="gold">GOLD</th>
+                <th class="platinum">PLATINUM</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Access to 3 games to choose from</td>
+                <td>Access to 5 games to choose from</td>
+                <td>Access to 7 games to choose from</td>
+                <td>Access to all games </td>
+
+            </tr>
+            <tr class="gray-bg">
+                <td>24/7 support</td>
+                <td>24/7 support</td>
+                <td>24/7 support</td>
+                <td>24/7 support</td>
+            </tr>
+            <tr>
+                <td>Permanent access to the library</td>
+                <td>Permanent access to the library</td>
+                <td>Permanent access to the library</td>
+                <td>Permanent access to the library</td>
+            </tr>
+            <tr class="gray-bg">
+                <td></td>
+                <td>Exclusive in-game rewards</td>
+                <td>Exclusive in-game rewards</td>
+                <td>Exclusive in-game rewards</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>Access to the games two days before the release date</td>
+            </tr>
+            <tr>
+                <td>buy for $2.99 per month</td>
+                <td>buy for $5.99 per month</td>
+                <td>buy for $8.99 per month</td>
+                <td>buy for $13.99 per month</td>
+            </tr>
+            <tr>
+                <td>select</td>
+                <td>select</td>
+                <td>select</td>
+                <td>select</td>
+            </tr>
+
+        </tbody>
+    </table>
 </body>
+
 </html>
