--- a/top games/Домашнее задание/index.html
+++ b/top games/Домашнее задание/index.html
@@ -40,40 +40,29 @@
         <p><b>$180</b></p>
         <a href="" class="button">buy</a>
     </div>
-    <h2 id="mmo">MMO</h2>
+    <h2 id="salad">salad</h2>
     <div class="card">
-        <img src="3.jpg" alt="rocket league">
-        <h3>rocket league</h3>
+        <img src="2.jpg" alt="salad">
         <p><i> Psyonix</i> </p>
         <p><b> free</b></p>
         <a href="" class="button"> download</a>
     </div>
     <div class="card">
-        <img src="1.jpg" alt="roblox">
-        <h3>roblox</h3>
+        <img src="6.jpg" alt="salad">
         <p><i>Roblox corporation</i></p>
         <p><b> $4.76</b></p>
         <a href="" class="button">buy</a>
     </div>
-    <div class="card">
-        <img src="4.jpeg" alt="World of tanks">
-        <h3> World of tanks</h3>
-        <p><i> Wargaming</i></p>
-        <p><b> $10.10</b></p>
-        <a href="" class="button">buy</a>
-    </div>
 
-    <h2 id="action">action</h2>
+    <h2 id="hot meals">hot meals</h2>
     <div class="card">
-        <img src="5.png" alt="GTA5">
-        <h3> GTA5</h3>
+        <img src="5.png" alt="">
         <p><i> Rckstar north</i></p>
         <p><b>$10.77</b></p>
         <a href="" class="button">buy</a>
     </div>
     <div class="card">
-        <img src="4.jpeg" alt="World of tanks">
-        <h3> World of tanks</h3>
+        <img src="4.jpeg" alt="">
         <p><i> Wargaming</i></p>
         <p><b> $10.10</b></p>
         <a href="" class="button">buy</a>
