--- a/top games/index.html
+++ b/top games/index.html
@@ -225,20 +225,19 @@
                 <td>Access to the games two days before the release date</td>
             </tr>
             <tr>
-                <td>buy for $2.99 per month</td>
-                <td>buy for $5.99 per month</td>
-                <td>buy for $8.99 per month</td>
-                <td>buy for $13.99 per month</td>
+                <td><p class="price">buy for $2.99 per month</p></td>
+                <td><p class="price">buy for $5.99 per month</p></td>
+                <td><p class="price">buy for $8.99 per month</p></td>
+                <td><p class="price">buy for $13.99 per month</p></td>
             </tr>
             <tr>
-                <td>select</td>
-                <td>select</td>
-                <td>select</td>
-                <td>select</td>
+                <td><a href="" class="select">select</a></td>
+                <td><a href="" class="select">select</a></td>
+                <td><a href="" class="select">select</a></td>
+                <td><a href="" class="select">select</a></td>
             </tr>
 
         </tbody>
     </table>
 </body>
-
 </html>
