--- a/top games/Домашнее задание/index.html
+++ b/top games/Домашнее задание/index.html
@@ -9,61 +9,66 @@
 </head>
 
 <body>
-    <h1 id="best">Best games</h1>
+    <div class="menu">
+<a href="#all"> all dishes</a>
+<a href="#salad"> salad</a>
+<a href="#hotmeals">hot meals</a>
+    </div>
+    <h1 id="all">all dishes</h1>
     <div class="card">
         <img src="1.jpg" alt="pizza">
         <h3>pizza <span>®</span></h3>
         <p><b> $350</b></p>
-        <a href="" class="button">buy</a>
+
     </div>
     <div class="card">
         <img src="2.jpg" alt="salad">
         <h3>salad<span>®</span></h3>
         <p><b>$280</b></p>
-        <a href="" class="button">buy</a>
+
     </div>
     <div class="card">
         <img src="3.jpg" alt="pasta">
         <h3>pasta<span>®</span></h3>
         <p><b>$320</b></p>
-        <a href="" class="button">buy</a>
+
     </div>
     <div class="card">
         <img src="4.jpeg" alt="lasania">
         <h3>lasania <span>®</span></h3>
         <p><b>$220</b></p>
-        <a href="" class="button">buy</a>
+
     </div>
     <div class="card">
         <img src="5.jpg" alt="chescake">
         <h3>chescake <span>®</span></h3>
         <p><b>$180</b></p>
-        <a href="" class="button">buy</a>
+
     </div>
     <h2 id="salad">salad</h2>
     <div class="card">
         <img src="2.jpg" alt="salad">
-        <p><i> Psyonix</i> </p>
+        <p><i> salad</i> </p>
         <p><b> free</b></p>
-        <a href="" class="button"> download</a>
+
     </div>
     <div class="card">
         <img src="6.jpg" alt="salad">
-        <p><i>Roblox corporation</i></p>
+        <p><i>salad</i></p>
         <p><b> $4.76</b></p>
-        <a href="" class="button">buy</a>
     </div>
 
-    <h2 id="hot meals">hot meals</h2>
+    <h2 id="hotmeals">hot meals</h2>
     <div class="card">
-        <img src="5.png" alt="">
-        <p><i> Rckstar north</i></p>
+        <img src="7.jpg" alt="burger">
+        <p><i> burger</i></p>
         <p><b>$10.77</b></p>
-        <a href="" class="button">buy</a>
     </div>
     <div class="card">
-        <img src="4.jpeg" alt="">
-        <p><i> Wargaming</i></p>
+        <img src="3.jpg" alt="pasta">
+        <p><i> pasta</i></p>
         <p><b> $10.10</b></p>
-        <a href="" class="button">buy</a>
     </div>
+
+</body>
+</html>
