--- a/top games/Домашнее задание/index.html
+++ b/top games/Домашнее задание/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <div class="menu">
-<a href="#all"> all dishes</a>
-<a href="#salad"> salad</a>
-<a href="#hotmeals">hot meals</a>
+        <a href="#all"> all dishes</a>
+        <a href="#salad"> salad</a>
+        <a href="#hotmeals">hot meals</a>
     </div>
     <h1 id="all">all dishes</h1>
     <div class="card">
@@ -49,26 +49,51 @@
     <div class="card">
         <img src="2.jpg" alt="salad">
         <p><i> salad</i> </p>
-        <p><b> free</b></p>
+        <p><b> 280</b></p>
 
     </div>
     <div class="card">
         <img src="6.jpg" alt="salad">
         <p><i>salad</i></p>
-        <p><b> $4.76</b></p>
+        <p><b> $150</b></p>
     </div>
 
     <h2 id="hotmeals">hot meals</h2>
     <div class="card">
         <img src="7.jpg" alt="burger">
         <p><i> burger</i></p>
-        <p><b>$10.77</b></p>
+        <p><b>$220</b></p>
     </div>
     <div class="card">
         <img src="3.jpg" alt="pasta">
         <p><i> pasta</i></p>
-        <p><b> $10.10</b></p>
+        <p><b> $320</b></p>
     </div>
-
+    <div class="card">
+        <img src="1.jpg" alt="pizza">
+        <p><i> pizza</i></p>
+        <p><b> $350</b></p>
+    </div>
+    <div class="card">
+        <img src="8.jpg" alt="beafshtex">
+        <p><i> beafshtex</i></p>
+        <p><b> $330</b></p>
+    </div>
+    <div class="card">
+        <img src="4.jpeg" alt="lazania">
+        <p><i> lazania</i></p>
+        <p><b> $220</b></p>
+    </div>
+    <h2 id="hotmeals">hot meals</h2>
+    <div class="card">
+        <img src="4.jpeg" alt="musowoy">
+        <p><i> musowoy</i></p>
+        <p><b> $100</b></p>
+    </div>
+    <div class="card">
+        <img src="5.jpg" alt="chescake">
+        <p><i> chescake</i></p>
+        <p><b> $180</b></p>
+    </div>
 </body>
 </html>
