--- a/top games/Домашнее задание/index.html
+++ b/top games/Домашнее задание/index.html
@@ -25,33 +25,50 @@
         <img src="2.jpg" alt="salad">
         <h3>salad<span>®</span></h3>
         <p><b>$280</b></p>
-
     </div>
     <div class="card">
         <img src="3.jpg" alt="pasta">
         <h3>pasta<span>®</span></h3>
         <p><b>$320</b></p>
-
     </div>
     <div class="card">
         <img src="4.jpeg" alt="lasania">
         <h3>lasania <span>®</span></h3>
         <p><b>$220</b></p>
-
     </div>
     <div class="card">
         <img src="5.jpg" alt="chescake">
         <h3>chescake <span>®</span></h3>
         <p><b>$180</b></p>
-
     </div>
+    <div class="card">
+        <img src="6.jpg" alt="salad">
+        <p><i>salad</i></p>
+        <p><b> $150</b></p>
+    </div>
+    <div class="card">
+        <img src="7.jpg" alt="burger">
+        <p><i> burger</i></p>
+        <p><b>$220</b></p>
+    </div>
+    <div class="card">
+        <img src="8.jpg" alt="beafshtex">
+        <p><i> beafshtex</i></p>
+        <p><b> $330</b></p>
+    </div>
+    <div class="card">
+        <img src="9.jpg" alt="musowoy">
+        <p><i> musowoy</i></p>
+        <p><b> $100</b></p>
+    </div>
+
     <h2 id="salad">salad</h2>
     <div class="card">
         <img src="2.jpg" alt="salad">
         <p><i> salad</i> </p>
         <p><b> 280</b></p>
-
     </div>
+
     <div class="card">
         <img src="6.jpg" alt="salad">
         <p><i>salad</i></p>
@@ -84,9 +101,10 @@
         <p><i> lazania</i></p>
         <p><b> $220</b></p>
     </div>
-    <h2 id="hotmeals">hot meals</h2>
+
+    <h2 id="deserts">deserts</h2>
     <div class="card">
-        <img src="4.jpeg" alt="musowoy">
+        <img src="9.jpg" alt="musowoy">
         <p><i> musowoy</i></p>
         <p><b> $100</b></p>
     </div>
@@ -96,4 +114,5 @@
         <p><b> $180</b></p>
     </div>
 </body>
+
 </html>
