--- a/top games/index.html
+++ b/top games/index.html
@@ -231,10 +231,10 @@
                 <td><p class="price">buy for $13.99 per month</p></td>
             </tr>
             <tr>
-                <td><a href="" class="select">select</a></td>
-                <td><a href="" class="select">select</a></td>
-                <td><a href="" class="select">select</a></td>
-                <td><a href="" class="select">select</a></td>
+                <td><a href="" class="select basic">select</a></td>
+                <td><a href="" class="select pro">select</a></td>
+                <td><a href="" class="select gold">select</a></td>
+                <td><a href="" class="select platinum">select</a></td>
             </tr>
 
         </tbody>
