--- a/top games/Домашнее задание/index.html
+++ b/top games/Домашнее задание/index.html
@@ -10,9 +10,10 @@
 
 <body>
     <div class="menu">
-        <a href="#all"> all dishes</a>
-        <a href="#salad"> salad</a>
-        <a href="#hotmeals">hot meals</a>
+        <a href="#all" class="menu-link"> all dishes</a>
+        <a href="#salad" class="menu-link"> salad</a>
+        <a href="#hotmeals" class="menu-link">hot meals</a>
+        <a href="#desserts" class="menu-link">desserts</a>
     </div>
     <h1 id="all">all dishes</h1>
     <div class="card">
@@ -102,7 +103,7 @@
         <p><b> $220</b></p>
     </div>
 
-    <h2 id="deserts">deserts</h2>
+    <h2 id="desserts">desserts</h2>
     <div class="card">
         <img src="9.jpg" alt="musowoy">
         <p><i> musowoy</i></p>
