--- a/cinema/index.html
+++ b/cinema/index.html
@@ -13,17 +13,16 @@
         <a href="#cartoons"><b>Cartoons</b></a>
         <a href="#fantasy"><b>Fantasy</b></a>
     </div>
-    <div id="kinokomics" class="films-wrapper">
+    <id="kinokomics" class="films-wrapper">
         <h2 class="genrename">Movie comics</h2>
-        <div>
             <div class="filmcard">
                 <!-- I dragged the pictures from folder to folder, maybe I messed something up? -->
-                <img src="Ligaspraved.jpeg" alt="picture" class="filmimg">
+                <img src="Ligaspraved.jpeg" alt="picture"> 
                 <h2>Zack Snyder's Justice League</h2>
                 <p>Inspired by Superman's sacrifice, Bruce Wayne regained his faith in humanity. He enlists
                   with the help of a new ally, Diana Prince, to fight an even more powerful enemy. Batman and
                   Wonder Woman recruits a team of superhumans to fight the awakened threat. Will it be possible to save the planet?</p>
-                <div class="button">To buy a ticket</div>
+                <a href="" class="button">To buy a ticket</a>
             </div>
             <div class="filmcard">
                 <img src="Avengers.jpeg" alt="picture" class="filmimg">
