--- a/top games/Домашнее задание/index.html
+++ b/top games/Домашнее задание/index.html
@@ -114,6 +114,50 @@
         <p><i> chescake</i></p>
         <p><b> $180</b></p>
     </div>
-</body>
+    <h2 class="plans">On our website you can learn more about the price and serving size of each dish</h2>
+    <table>
+        <thead>
+            <tr>
+                <th class="dish name">DISH NAME</th>
+                <th class="WEIGHT">WEIGHT</th>
+                <th class="PRICE">PRICE</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Margherita Pizza</td>
+                <td>Caesar Salad</td>
+                <td>Pasta Carbonara</td>
+                <td>Lasagna Bolognese</td>
+                <td>New York Cheesecake</td>
+                <td>Greeek Salad</td>
+                <td>Hamburger</td>
+                <td>Beefsteak</td>
+                <td>Mousse Cake</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td><p class="price">buy for $4.75</p></td>
+                <td><p class="price">buy for $3.80</p></td>
+                <td><p class="price">buy for $4.34</p></td>
+                <td><p class="price">buy for $2.98</p></td>
+                <td><p class="price">buy for $2.44</p></td>
+                <td><p class="price">buy for $2.04</p></td>
+                <td><p class="price">buy for $2.99</p></td>
+                <td><p class="price">buy for $4.49</p></td>
+                <td><p class="price">buy for $1.36</p></td>
+            </tr>
+            <tr>
+                <td><a href="" class="dish name">select</a></td>
+                <td><a href="" class="Weight">select</a></td>
+                <td><a href="" class="price">select</a></td>
+            </tr>
 
+        </tbody>
+    </table>
+</body>
 </html>
