--- a/cinema/index.html
+++ b/cinema/index.html
@@ -8,16 +8,14 @@
 <body>
    <h1>Cinema "Change"</h1> 
     <div class="menu">
-        <!-- It seems to me that everything is written beautifully. But why doesn't it work? -->
-        <a href="#kinokomics"><b>Movie comics</b></a>
-        <a href="#cartoons"><b>Cartoons</b></a>
-        <a href="#fantasy"><b>Fantasy</b></a>
+        <a href="#kinokomics" class="menu-link"><b>Movie comics</b></a>
+        <a href="#cartoons" class="menu-link"><b>Cartoons</b></a>
+        <a href="#fantasy" class="menu-link"><b>Fantasy</b></a>
     </div>
-    <id="kinokomics" class="films-wrapper">
+    <div id="kinokomics" class="films-wrapper">
         <h2 class="genrename">Movie comics</h2>
             <div class="filmcard">
-                <!-- I dragged the pictures from folder to folder, maybe I messed something up? -->
-                <img src="Ligaspraved.jpeg" alt="picture"> 
+                <img src="images/Ligaspraved.jpeg" alt="images"> 
                 <h2>Zack Snyder's Justice League</h2>
                 <p>Inspired by Superman's sacrifice, Bruce Wayne regained his faith in humanity. He enlists
                   with the help of a new ally, Diana Prince, to fight an even more powerful enemy. Batman and
@@ -25,7 +23,7 @@
                 <a href="" class="button">To buy a ticket</a>
             </div>
             <div class="filmcard">
-                <img src="Avengers.jpeg" alt="picture" class="filmimg">
+                <img src="images/Avengers.jpeg" alt="picture" class="filmimg">
                 <h2>Avengers</h2>
                 <p>Loki, Thor's half-brother, returns, and this time he is not alone. The earth is on the verge of enslavement, and
                     only the best of the best can save humanity. Head of the international organization S.H.I.E.L.D. Nick Fury
@@ -33,7 +31,7 @@
                 <div class="button">To buy a ticket</div>
             </div>
             <div class="filmcard">
-                <img src="AvengersAltron.jpeg" alt="picture" class="filmimg">
+                <img src="images/AvengersAltron.jpeg" alt="picture" class="filmimg">
                 <h2>Avengers: Age of Ultron</h2>
                 <p>Humanity is on the verge of destruction. This time people are threatened by Ultron - artificial intelligence, previously
                      created in order to protect the Earth from any threats. However, he considered the main threat
@@ -44,7 +42,7 @@
     	</div>
         	<div>
             	<div class="filmcard">
-                	<img src="AvengersInfinitywar.jpeg" alt="picture" class="filmimg">
+                	<img src="images/AvengersInfinitywar.jpeg" alt="picture" class="filmimg">
                 	<h2>Avengers: Infinity War</h2>
                 	<p>While the Avengers and their allies continue to protect the world from various dangers, a new threat arises from
                      space: Thanos. An intergalactic tyrant is pursuing the goal of collecting all six Infinity Stones -
@@ -52,7 +50,7 @@
                 	<div class="button">To buy a ticket</div>
             	</div>
             	<div class="filmcard">
-                	<img src="AvengersFinal.jpeg" alt="picture" class="filmimg">
+                	<img src="images/AvengersFinal.jpeg" alt="picture" class="filmimg">
                 	<h2>Мстители: Финал</h2>
                 	<p>The surviving members of the Avengers team and their allies must develop a new plan that will help
                      resist the destructive actions of the mighty titan Thanos. After the most ambitious and
@@ -60,7 +58,7 @@
                 	<div class="button">To buy a ticket</div>
             	</div>
             	<div class="filmcard">
-                	<img src="Ironman.jpeg" alt="picture" class="filmimg">
+                	<img src="images/Ironman.jpeg" alt="picture" class="filmimg">
                 	<h2>iron Man</h2>
                 	<p>Billionaire inventor Tony Stark is captured by Afghan terrorists who are trying to force
                      him to create weapons of mass destruction. In secret from his captors, Stark constructs a unique
@@ -70,49 +68,47 @@
     		</div>
         </div>
     </div>
-
-    <div class="films-wrapper">
+    <div id="cartoons" class="films-wrapper">
         <h2 class="genrename">To buy a ticket</h2>
         <div>
             <div class="filmcard">
-                <img src="Cars.jpg" alt="picture" class="filmimg">
+                <img src="images/Cars.jpg" alt="picture" class="filmimg">
                 <h2>Cars</h2>
                 <p>Indomitable in his desire to always win in everything, the racing car "Lightning" McQueen suddenly
                  discovers that he has lost his way and is stuck in the small provincial town of Radiator Springs, which is located somewhere on Route 66 in California.</p>
                 <div class="button">To buy a ticket</div>
             </div>
             <div class="filmcard">
-                <img src="Walle.jpeg" alt="picture" class="filmimg">
+                <img src="images/Walle.jpeg" alt="picture" class="filmimg">
                 <h2>WALL-E</h2>
                 <p>The robot WALL-E works diligently from year to year on the empty Earth, cleaning our planet from the mountains of garbage left behind by people who flew into space. He has no idea that very soon incredible events will happen, thanks to which he will meet friends.</p>
                 <div class="button">To buy a ticket</div>
             </div>
             <div class="filmcard">
-                <img src="Madagaskar.jpeg" alt="picture" class="filmimg">
+                <img src="images/Madagaskar.jpeg" alt="picture" class="filmimg">
                 <h2>Madagascar</h2>
                 <p>Four pampered animals from the Central Zoo in New York decide to escape. Finding yourself after
                  shipwreck on the exotic island of Madagascar, travelers are horrified to realize that with the city
                  they will have to say goodbye to their habits.</p>
-                <!-- It will be necessary to figure out later why she is not like everyone else. -->
-                <div>To buy a ticket</div>
+                <div class="button">To buy a ticket</div>
             </div>
         </div>
         <div>
             <div class="filmcard">
-                <img src="Madagaskar2.jpeg" alt="picture" class="filmimg">
+                <img src="images/Madagaskar2.jpeg" alt="picture" class="filmimg">
                 <h2>Madagascar 2</h2>
                 <p>Life in Madagascar, full of dangers, did not live up to the expectations of those accustomed to the comfort of the New York Zoo.
                  animals - Alex the lion, Marty the zebra, Melman the giraffe and Gloria the hippopotamus - and the friends decide to escape from the island.</p>
                 <div class="button">To buy a ticket</div>
             </div>
     		<div class="filmcard">
-                <img src="Madagaskar3.jpeg" alt="picture" class="filmimg">
+                <img src="images/Madagaskar3.jpeg" alt="picture" class="filmimg">
                 <h2>Madagascar 3</h2>
                 <p>Alex the lion, Marty the zebra, Gloria the hippopotamus and Melman the giraffe, as well as King Julian, Maurice, Mort and the Penguins are still trying to return to New York. This time their path will take them through Europe, where they will open a circus.</p>
                 <div class="button">To buy a ticket</div>
             </div>
             <div class="filmcard">
-                <img src="Lednik.jpeg" alt="picture" class="filmimg">
+                <img src="images/Lednik.jpeg" alt="picture" class="filmimg">
                 <h2>Glacial period</h2>
                 <p>The action takes place 20 thousand years ago. To avoid the approaching glacial
                  cold period, animals migrate south. However, some of them still decide to stay...</p>
@@ -120,12 +116,11 @@
             </div>
         </div>
     </div>
-    <!-- Agree, everything is fine here, right? Why doesn't it work then? -->
-    < id="fantasy" class="films-wrapper">
+    <div id="fantasy" class="films-wrapper">
         <h2 class="genrename">Fantasy</h2>
         <div>
             <div class="filmcard">
-                <img src="MK.jpeg" alt="picture" class="filmimg">
+                <img src="images/MK.jpeg" alt="picture" class="filmimg">
                 <h2>Mortal Kombat</h2>
                 <p>Mixed martial arts fighter Cole Young has more than once agreed to lose for money. He doesn't know about his heritage and
                  why does Outworld Emperor Shang Tsung send the powerful cryomancer Sub-Zero to hunt for
@@ -133,7 +128,7 @@
                 <div class="button">To buy a ticket</div>
             </div>
             <div class="filmcard">
-                <img src="Avatar.jpeg" alt="picture" class="filmimg">
+                <img src="images/Avatar.jpeg" alt="picture" class="filmimg">
                 <h2>Avatar</h2>
                 <p>Former Marine Jake Sully is confined to a wheelchair. Despite his weak body, Jake is at heart
                  still remains a warrior. He receives a task to travel several light years to the base
@@ -141,7 +136,7 @@
                 <div class="button">To buy a ticket</div>
             </div>
             <div class="filmcard">
-                <img src="Matrix.jpeg" alt="picture" class="filmimg">
+                <img src="images/Matrix.jpeg" alt="picture" class="filmimg">
                 <h2>Matrix</h2>
                 <p>The world of the Matrix is an illusion that exists only in the endless sleep of doomed humanity. Thomas Anderson's life is divided into two parts: during the day he is an ordinary office worker who receives
                  scoldings from his superiors, and at night he turns into a hacker named Neo, and there is no place on the network where he does not
@@ -149,20 +144,20 @@
                 <div class="button">To buy a ticket</div>
             </div>
             <div class="filmcard">
-                <img src="Terminator2.jpeg" alt="picture" class="filmimg">
+                <img src="images/Terminator2.jpeg" alt="picture" class="filmimg">
                 <h2>Terminator 2: Judgment Day</h2>
                 <p>More than ten years have passed since the cyborg from 2029 tried to destroy Sarah Connor - the woman whose unborn son will win humanity's war against the machines. Now Sarah has a son, John, and the time when he will lead the surviving people in the fight against the machines, inexorably approaching. It is at this moment that a new terminator arrives from the post-apocalyptic future - the practically invulnerable T-1000 model, capable of taking on any form. </p>
                 <div class="button">To buy a ticket</div>
             </div>
             <div class="filmcard">
-                <img src="Pikachu.jpeg" alt="picture" class="filmimg">
+                <img src="images/Pikachu.jpeg" alt="picture" class="filmimg">
                 <h2>Pokemon. Detective Pikachu</h2>
                 <p>The story begins with the mysterious disappearance of private detective Harry Goodman, which his 21-year-old son Tim will have to investigate. He will be assisted in the investigation by his father's former partner, the talkative detective Pikachu, who is a mystery even to himself. Discovering that they are somehow fantastically able to communicate with each other, Tim and Pikachu set out to find clues along the neon streets.
                  the streets of Ryme City, where people and Pokémon live side by side.</p>
                 <div class="button">To buy a ticket</div>
             </div>
             <div class="filmcard">
-                <img src="Pirati1.jpeg" alt="picture" class="filmimg">
+                <img src="images/Pirati1.jpeg" alt="picture" class="filmimg">
                 <h2>Pirates of the Caribbean</h2>
                 <p>The life of a charismatic adventurer, Captain Jack Sparrow, full of exciting adventures, dramatically
                  changes when his nemesis Captain Barbossa steals Jack's ship the Black Pearl and then
@@ -170,9 +165,8 @@
                 <div class="button">To buy a ticket</div>
             </div>
         </div>
-    </>
-    <!-- Something is wrong here. -->
-    <h2 class="food">Our cinema has an excellent buffet!</h2>
+    </div>
+    <h2 class="food".Our cinema has an excellent buffet!</h2>
     <!-- I wrote and wrote a table, but in the end it never appeared... :( -->
         <caption>Our menu</caption> <!-- There is some inconsistency with the template here -->
         <thead>
