--- a/top games/Домашнее задание/index.html
+++ b/top games/Домашнее задание/index.html
@@ -126,30 +126,54 @@
         <tbody>
             <tr>
                 <td>Margherita Pizza</td>
+                <td>500g</td>
+                <td>
+                    <p class="price">buy for $4.75</p>
+                </td>
+            </tr>
+            <tr>
                 <td>Caesar Salad</td>
-                <td>Pasta Carbonara</td>
-                <td>Lasagna Bolognese</td>
-                <td>New York Cheesecake</td>
-                <td>Greeek Salad</td>
-                <td>Hamburger</td>
-                <td>Beefsteak</td>
-                <td>Mousse Cake</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td><p class="price">buy for $4.75</p></td>
+                <td>250g</td>
                 <td><p class="price">buy for $3.80</p></td>
-                <td><p class="price">buy for $4.34</p></td>
-                <td><p class="price">buy for $2.98</p></td>
-                <td><p class="price">buy for $2.44</p></td>
-                <td><p class="price">buy for $2.04</p></td>
-                <td><p class="price">buy for $2.99</p></td>
-                <td><p class="price">buy for $4.49</p></td>
-                <td><p class="price">buy for $1.36</p></td>
+            </tr>
+
+            <td>Pasta Carbonara</td>
+            <td>Lasagna Bolognese</td>
+            <td>New York Cheesecake</td>
+            <td>Greeek Salad</td>
+            <td>Hamburger</td>
+            <td>Beefsteak</td>
+            <td>Mousse Cake</td>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+
+
+                <td>
+                    <p class="price">buy for $4.34</p>
+                </td>
+                <td>
+                    <p class="price">buy for $2.98</p>
+                </td>
+                <td>
+                    <p class="price">buy for $2.44</p>
+                </td>
+                <td>
+                    <p class="price">buy for $2.04</p>
+                </td>
+                <td>
+                    <p class="price">buy for $2.99</p>
+                </td>
+                <td>
+                    <p class="price">buy for $4.49</p>
+                </td>
+                <td>
+                    <p class="price">buy for $1.36</p>
+                </td>
             </tr>
             <tr>
                 <td><a href="" class="dish name">select</a></td>
@@ -160,4 +184,5 @@
         </tbody>
     </table>
 </body>
+
 </html>
