--- a/cinema/index.html
+++ b/cinema/index.html
@@ -198,7 +198,7 @@
     </div>
     <h2 class="food">Our cinema has an excellent buffet!</h2>
     <table>
-        <caption>Our menu</caption> <!-- There is some inconsistency with the template here -->
+        <caption><i>Our menu</i></caption> 
         <thead>
             <tr>
                 <th>Name</th>
@@ -208,42 +208,42 @@
         <tbody>
             <tr>
                 <td>
-                    Popcorn <!-- It's worth checking the template --> 200g
+                    Popcorn<br>200g
                 </td>
                 <td class="price">
-                    $1<!-- It's worth checking the template -->
+                    $<b>1</b>
                 </td>
             </tr>
             <tr>
                 <td>
-                    Popcorn 450g
+                    Popcorn<br>450g
                 </td>
                 <td class="price">
-                    $2
+                    $<b>2</b>
                 </td>
             </tr>
             <tr>
                 <td>
-                    Lemonade 0.3l
+                    Lemonade<br>0.3l
                 </td>
                 <td class="price">
-                    $0.8
+                    $<b>0.8</b>
                 </td>
             </tr>
             <tr>
                 <td>
-                    Lemonade 0.5l
+                    Lemonade<br>0.5l
                 </td>
                 <td class="price">
-                    $1.4
+                    $<b>1.4</b>
                 </td>
             </tr>
             <tr>
                 <td>
-                    Lemonade 0.7l
+                    Lemonade<br>0.7l
                 </td>
                 <td class="price">
-                    $1.73
+                    $<b>1.73</b>
                 </td>
             </tr>
         </tbody>
@@ -255,14 +255,13 @@
             <li>New films are always in theaters</li>
             <li>Book online</li>
             <li>Delicious buffet</li>
-            <!-- Everything is correct, why doesn’t it work? -->
-            <il>Giveaways and giveaways weekly</li>
+            <li>Giveaways and giveaways weekly</li>
         </ul>
     </div>
     <div>
         <h2 class="welcome">Our address and telephone</h2>
-        <p class="adress">Moscow, st. Tverskaya, 5.
-            8(953)-134-32-56</p> <!-- Что-то с номером не так. -->
+        <p class="adress">Moscow, st. Tverskaya, 5.<br>
+            8(953)-134-32-56</p> 
     </div>
     <h2 class="welcome">We will wait for you!</h2>
 </body>
