--- a/html_css_reference.html
+++ b/html_css_reference.html
@@ -25,9 +25,18 @@
             </tr>
             <tr>
                 <td>border-collapse</td>
+                <td>collapse removes the space bitween the cells,separate adds the space between the cells</td>
+                <td>control the space between the cells</td>
+            </tr>
+            <tr>
+                <td>border-radius</td>
+                <td>3px,10px</td>
+                <td>border radius rounds the corners</td>
+            </tr>
+            <tr>
+
             </tr>
         </tbody>
     </table>
 </body>
-
 </html>
