--- a/comics/index.html
+++ b/comics/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <div class="cover"></div> 
+  <h1>cat and mouse</h1> 
+  <hr> 
+ <table class="comics">
+    <tr>
+        <td class="pic1">
+            
+        </td>
+    </tr>
+    <tr>
+        <td class="pic2">
+
+        </td>
+    </tr>
+    <tr>
+        <td class="pic3">
+
+        </td>
+    </tr>
+ </table>
+ <p>Comics by Evgeny Fedorov</p>   
 </body>
 </html>
-Написать стили для справочника: задать цвет фона страницы, задать цвет фона таблицы, задать ячейкам таблицы границы, сделать текст в заголовочных ячейках таблицы больше (30px)
+<!-- Написать стили для справочника: задать цвет фона страницы, задать цвет фона таблицы, задать ячейкам таблицы границы, сделать текст в заголовочных ячейках таблицы больше (30px) -->
