--- a/comics/Домашнее задание/images/index.html
+++ b/comics/Домашнее задание/images/index.html
@@ -12,18 +12,18 @@
     <table>
         <tr>
 <td class="pic1"></td>
-<td></td>
-<td></td>
+<td class="pic2"></td>
+<td class="pic3"></td>
         </tr>
         <tr>
-<td></td>
-<td></td>
-<td></td>
+<td class="pic4"></td>
+<td class="pic5"></td>
+<td class="pic6"></td>
         </tr>
         <tr>
-<td></td>
-<td></td>
-<td></td>
+<td class="pic7"></td>
+<td class="pic8"></td>
+<td class="pic9"></td>
         </tr>
     </table>
 </body>
