--- a/harry potter/index.html
+++ b/harry potter/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class=paper>
         <div class="header"></div>
@@ -15,9 +17,25 @@
                 <h1>Harry potter eat some candy</h1>
                 <hr>
                 <img src="img/animated-pic.gif">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque nostrum eos dolorem quibusdam voluptatem. Commodi iure autem pariatur sint officia nemo quia impedit consectetur molestias, iusto molestiae error non culpa. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eos veritatis veniam, officiis cupiditate labore itaque incidunt ipsam molestiae ullam vel ipsa. Iste maiores eum sit amet sunt ipsam odit facere iure fugiat consequatur! Amet soluta, et ipsam consectetur reiciendis architecto iure, pariatur nihil magnam cumque similique natus facere. Harum ea dignissimos officia amet corrupti excepturi neque voluptates voluptatibus quam eum deserunt ullam corporis vero maxime iusto quae doloremque nesciunt vitae eveniet repellat, ab veritatis error. Recusandae eos beatae nisi nesciunt sapiente aspernatur facere sed quis tenetur? Provident expedita quo, iure fuga quod dolorem tempora eius obcaecati culpa asperiores dolore?</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque nostrum eos dolorem quibusdam
+                    voluptatem. Commodi iure autem pariatur sint officia nemo quia impedit consectetur molestias, iusto
+                    molestiae error non culpa. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eos
+                    veritatis veniam, officiis cupiditate labore itaque incidunt ipsam molestiae ullam vel ipsa. Iste
+                    maiores eum sit amet sunt ipsam odit facere iure fugiat consequatur! Amet soluta, et ipsam
+                    consectetur reiciendis architecto iure, pariatur nihil magnam cumque similique natus facere. Harum
+                    ea dignissimos officia amet corrupti excepturi neque voluptates voluptatibus quam eum deserunt ullam
+                    corporis vero maxime iusto quae doloremque nesciunt vitae eveniet repellat, ab veritatis error.
+                    Recusandae eos beatae nisi nesciunt sapiente aspernatur facere sed quis tenetur? Provident expedita
+                    quo, iure fuga quod dolorem tempora eius obcaecati culpa asperiores dolore?</p>
+            </div>
+            <div class="article2">
+                <h2>Some Information</h2>
+                <p class="column">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quisquam magni omnis fugiat nesciunt quas est officia. Exercitationem laudantium eligendi consectetur provident saepe assumenda, unde quidem sed recusandae pariatur odio!</p>
+                <p class="column">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quisquam magni omnis fugiat nesciunt quas est officia. Exercitationem laudantium eligendi consectetur provident saepe assumenda, unde quidem sed recusandae pariatur odio!</p>
+                <p class="column">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quisquam magni omnis fugiat nesciunt quas est officia. Exercitationem laudantium eligendi consectetur provident saepe assumenda, unde quidem sed recusandae pariatur odio!</p>
             </div>
         </div>
     </div>
 </body>
+
 </html>
