--- a/harry potter/Домашнее задание/index.html
+++ b/harry potter/Домашнее задание/index.html
@@ -12,18 +12,13 @@
     <div class=paper>
         <div class="header"></div>
         <div class="sub-header"></div>
-        <div class="article-container">
             <div class="article1">
-                <h1>Police seek spider-man</h1>
-                <hr>
-                <img src="img/pic0.PNG">
-                <img src="img/pic1.PNG">
-                <img src="img/pic2.PNG">
-                <img src="img/pic3.PNG">
-                <img src="img/pic4.PNG">
+                <img src="img/pic1.PNG" class="spider-man">
+                <h1>Police seek spider-man!</h1>
+                <img src="img/pic2.PNG" class="red-spider"><br>
+                <img src="img/pic4.PNG" class="search">
             </div>
+            <h2>Bank Robbereis on the rise: pages 1-4</h2>
         </div>
-    </div>
 </body>
-
 </html>
