--- a/html_css_reference.html
+++ b/html_css_reference.html
@@ -21,7 +21,8 @@
         <tbody>
             <tr>
                 <td>display</td>
-                <td>inline-can stand in the same row, can't change width and height, block-can't stand in the same row, can change width and height,inline-block-can stand in the same row, can change width and height</td>
+                <td>inline-can stand in the same row, can't change width and height, block-can't stand in the same row,
+                    can change width and height,inline-block-can stand in the same row, can change width and height</td>
                 <td>changes the way the elements are desplayed</td>
             </tr>
             <tr>
@@ -35,9 +36,17 @@
                 <td>border radius rounds the corners</td>
             </tr>
             <tr>
-
+                <td> font size</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>text align</td>
+                <td></td>
+                <td></td>
             </tr>
         </tbody>
     </table>
 </body>
+
 </html>
